--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
     <string name="play_button">Play</string>
     <string name="settings_button">Settings</string>
     <string name="highscores_button">High Scores</string>
+    <string name="high_scores">High Scores</string>
+    <string name="settings">Settings</string>
+    <string name="play">Play</string>
+    <string name="difficulty">Difficulty</string>
+    <string name="easy">Easy</string>
+    <string name="medium">Medium</string>
+    <string name="hard">Hard</string>
 </resources>
