Add background music, and options to turn off background music and sound effects. Add new background music file.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="post_score_to_twitter">Post Score to Twitter</string>
     <string name="play_again">Play Again!</string>
     <string name="home">Home</string>
+    <string name="sounds">Sounds</string>
+    <string name="background_music">Background Music</string>
+    <string name="sound_effects">Sound Effects</string>
 </resources>
