Add High Score functionality, that stoes users scores in an sqlite database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="title_activity_settings">SettingsActivity</string>
 
     <string name="title_activity_twitter">TwitterActivity</string>
+    <string name="highscores">HighScores</string>
 </resources>
